# tds-proj-2-llm-quiz

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANTI_OVERFITTING_PROMPT.md  Dockerfile  FIXES_SUMMARY.md  QUICK_FIX_CHECKLIST.md  README.md  README_HF.md  checklist.md  deploy_hf.ps1  deploy_hf.sh  main.py  pyproject.toml  test_demo_quiz.py  test_direct_demo.py  test_llm_only.py  test_quiz3_answer.py  test_quiz3_browser.py  test_quiz3_direct.py  test_quiz3_pipeline.py  test_quiz_format.py  test_smoke.py
quiz_solver/: __init__.py  analysis.py  api.py  browser.py  config.py  data_sourcing.py  llm_analysis.py  llm_client.py  logging_utils.py  main.py  models.py  pipeline.py  question_parser.py  submission.py  task_handlers.py
tests/: integration_real_scraping.py  test_api_endpoints.py  test_q834_scenario.py
