[project]
name = "quiz-solver"
version = "0.1.0"
description = "LLM-powered automated quiz solver with 3-minute deadline support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
quiz-solver = "quiz_solver.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

